// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> should log console error when called with invalid pageInfo prop 1`] = `
Array [
  Array [
    "Warning: Invalid pageInfo prop supplied to \`Pagination\` component: {\\"perPage\\":0,\\"itemCount\\":10,\\"currentPage\\":4}",
  ],
]
`;

exports[`<Pagination /> should log console error when called with invalid pageInfo prop 2`] = `
Array [
  Array [
    "Warning: Invalid pageInfo prop supplied to \`Pagination\` component: {\\"perPage\\":0,\\"itemCount\\":0,\\"currentPage\\":4}",
  ],
]
`;

exports[`<Pagination /> should render correctly with custom labels 1`] = `
<nav
  aria-label="Pagination Navigation"
  role="navigation"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item page-item__first"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        « First custom
      </Link>
    </li>
    <li
      className="page-item page-item__prev"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        ⟨ Previous custom
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        1
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 2,
          }
        }
        scope="pagination"
        to="blog"
      >
        2
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        3
      </Link>
    </li>
    <li
      className="page-item active"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 4,
          }
        }
        scope="pagination"
        to="blog"
      >
        4
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        5
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 6,
          }
        }
        scope="pagination"
        to="blog"
      >
        6
      </Link>
    </li>
    <li
      className="page-item page-item__next"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        Next ⟩ custom
      </Link>
    </li>
    <li
      className="page-item page-item__last"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 9,
          }
        }
        scope="pagination"
        to="blog"
      >
        Last » custom
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`<Pagination /> should render correctly with custom range 1`] = `
<nav
  aria-label="Pagination Navigation"
  role="navigation"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item page-item__first"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        « First
      </Link>
    </li>
    <li
      className="page-item page-item__prev"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        ⟨ Previous
      </Link>
    </li>
    <li
      className="page-item active"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 4,
          }
        }
        scope="pagination"
        to="blog"
      >
        4
      </Link>
    </li>
    <li
      className="page-item page-item__next"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        Next ⟩
      </Link>
    </li>
    <li
      className="page-item page-item__last"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 9,
          }
        }
        scope="pagination"
        to="blog"
      >
        Last »
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`<Pagination /> should render correctly with custom range 2`] = `
<nav
  aria-label="Pagination Navigation"
  role="navigation"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item page-item__first"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        « First
      </Link>
    </li>
    <li
      className="page-item page-item__prev"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        ⟨ Previous
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        3
      </Link>
    </li>
    <li
      className="page-item active"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 4,
          }
        }
        scope="pagination"
        to="blog"
      >
        4
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        5
      </Link>
    </li>
    <li
      className="page-item page-item__next"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        Next ⟩
      </Link>
    </li>
    <li
      className="page-item page-item__last"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 9,
          }
        }
        scope="pagination"
        to="blog"
      >
        Last »
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`<Pagination /> should render correctly with custom range 3`] = `
<nav
  aria-label="Pagination Navigation"
  role="navigation"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item page-item__first"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        « First
      </Link>
    </li>
    <li
      className="page-item page-item__prev"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        ⟨ Previous
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        1
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 2,
          }
        }
        scope="pagination"
        to="blog"
      >
        2
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        3
      </Link>
    </li>
    <li
      className="page-item active"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 4,
          }
        }
        scope="pagination"
        to="blog"
      >
        4
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        5
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 6,
          }
        }
        scope="pagination"
        to="blog"
      >
        6
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 7,
          }
        }
        scope="pagination"
        to="blog"
      >
        7
      </Link>
    </li>
    <li
      className="page-item page-item__next"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        Next ⟩
      </Link>
    </li>
    <li
      className="page-item page-item__last"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 9,
          }
        }
        scope="pagination"
        to="blog"
      >
        Last »
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`<Pagination /> should render correctly with custom range 4`] = `
<nav
  aria-label="Pagination Navigation"
  role="navigation"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item page-item__first"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        « First
      </Link>
    </li>
    <li
      className="page-item page-item__prev"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        ⟨ Previous
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        1
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 2,
          }
        }
        scope="pagination"
        to="blog"
      >
        2
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        3
      </Link>
    </li>
    <li
      className="page-item active"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 4,
          }
        }
        scope="pagination"
        to="blog"
      >
        4
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        5
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 6,
          }
        }
        scope="pagination"
        to="blog"
      >
        6
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 7,
          }
        }
        scope="pagination"
        to="blog"
      >
        7
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 8,
          }
        }
        scope="pagination"
        to="blog"
      >
        8
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 9,
          }
        }
        scope="pagination"
        to="blog"
      >
        9
      </Link>
    </li>
    <li
      className="page-item page-item__next"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        Next ⟩
      </Link>
    </li>
    <li
      className="page-item page-item__last"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 9,
          }
        }
        scope="pagination"
        to="blog"
      >
        Last »
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`<Pagination /> should render correctly with custom theme 1`] = `
<nav
  aria-label="Pagination Navigation"
  role="navigation"
>
  <ul
    className="pagination-custom"
  >
    <li
      className="page-item-custom page-item__first-custom"
    >
      <Link
        className="page-link-custom"
        scope={null}
        to="blog"
      >
        « First
      </Link>
    </li>
    <li
      className="page-item-custom page-item__prev-custom"
    >
      <Link
        className="page-link-custom"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        ⟨ Previous
      </Link>
    </li>
    <li
      className="page-item-custom"
    >
      <Link
        className="page-link-custom"
        scope={null}
        to="blog"
      >
        1
      </Link>
    </li>
    <li
      className="page-item-custom"
    >
      <Link
        className="page-link-custom"
        params={
          Object {
            "page": 2,
          }
        }
        scope="pagination"
        to="blog"
      >
        2
      </Link>
    </li>
    <li
      className="page-item-custom"
    >
      <Link
        className="page-link-custom"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        3
      </Link>
    </li>
    <li
      className="page-item-custom active-custom"
    >
      <Link
        className="page-link-custom"
        params={
          Object {
            "page": 4,
          }
        }
        scope="pagination"
        to="blog"
      >
        4
      </Link>
    </li>
    <li
      className="page-item-custom"
    >
      <Link
        className="page-link-custom"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        5
      </Link>
    </li>
    <li
      className="page-item-custom"
    >
      <Link
        className="page-link-custom"
        params={
          Object {
            "page": 6,
          }
        }
        scope="pagination"
        to="blog"
      >
        6
      </Link>
    </li>
    <li
      className="page-item-custom page-item__next-custom"
    >
      <Link
        className="page-link-custom"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        Next ⟩
      </Link>
    </li>
    <li
      className="page-item-custom page-item__last-custom"
    >
      <Link
        className="page-link-custom"
        params={
          Object {
            "page": 9,
          }
        }
        scope="pagination"
        to="blog"
      >
        Last »
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`<Pagination /> should render correctly with defaults 1`] = `
<nav
  aria-label="Pagination Navigation"
  role="navigation"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item page-item__first"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        « First
      </Link>
    </li>
    <li
      className="page-item page-item__prev"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        ⟨ Previous
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        1
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 2,
          }
        }
        scope="pagination"
        to="blog"
      >
        2
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        3
      </Link>
    </li>
    <li
      className="page-item active"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 4,
          }
        }
        scope="pagination"
        to="blog"
      >
        4
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        5
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 6,
          }
        }
        scope="pagination"
        to="blog"
      >
        6
      </Link>
    </li>
    <li
      className="page-item page-item__next"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        Next ⟩
      </Link>
    </li>
    <li
      className="page-item page-item__last"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 9,
          }
        }
        scope="pagination"
        to="blog"
      >
        Last »
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`<Pagination /> should render correctly with full ui 1`] = `
<nav
  aria-label="Pagination Navigation"
  role="navigation"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item page-item__first"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        « First
      </Link>
    </li>
    <li
      className="page-item page-item__prev"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        ⟨ Previous
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        1
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 2,
          }
        }
        scope="pagination"
        to="blog"
      >
        2
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        3
      </Link>
    </li>
    <li
      className="page-item active"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 4,
          }
        }
        scope="pagination"
        to="blog"
      >
        4
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        5
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 6,
          }
        }
        scope="pagination"
        to="blog"
      >
        6
      </Link>
    </li>
    <li
      className="page-item page-item__next"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        Next ⟩
      </Link>
    </li>
    <li
      className="page-item page-item__last"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 9,
          }
        }
        scope="pagination"
        to="blog"
      >
        Last »
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`<Pagination /> should render correctly with mini ui 1`] = `
<nav
  aria-label="Pagination Navigation"
  role="navigation"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item page-item__prev"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        ⟨ Previous
      </Link>
    </li>
    <li
      className="page-item page-item__next"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        Next ⟩
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`<Pagination /> should render correctly with simple ui 1`] = `
<nav
  aria-label="Pagination Navigation"
  role="navigation"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item page-item__prev"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        ⟨ Previous
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        1
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 2,
          }
        }
        scope="pagination"
        to="blog"
      >
        2
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        3
      </Link>
    </li>
    <li
      className="page-item active"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 4,
          }
        }
        scope="pagination"
        to="blog"
      >
        4
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        5
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 6,
          }
        }
        scope="pagination"
        to="blog"
      >
        6
      </Link>
    </li>
    <li
      className="page-item page-item__next"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        Next ⟩
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`<Pagination /> shouldn't render disabled nav items when renderDisabled is false 1`] = `
<nav
  aria-label="Pagination Navigation"
  role="navigation"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item active"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        1
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 2,
          }
        }
        scope="pagination"
        to="blog"
      >
        2
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 3,
          }
        }
        scope="pagination"
        to="blog"
      >
        3
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 4,
          }
        }
        scope="pagination"
        to="blog"
      >
        4
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        5
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 6,
          }
        }
        scope="pagination"
        to="blog"
      >
        6
      </Link>
    </li>
    <li
      className="page-item page-item__next"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 2,
          }
        }
        scope="pagination"
        to="blog"
      >
        Next ⟩
      </Link>
    </li>
    <li
      className="page-item page-item__last"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 9,
          }
        }
        scope="pagination"
        to="blog"
      >
        Last »
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`<Pagination /> shouldn't render disabled nav items when renderDisabled is false 2`] = `
<nav
  aria-label="Pagination Navigation"
  role="navigation"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item page-item__first"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        « First
      </Link>
    </li>
    <li
      className="page-item page-item__prev"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 8,
          }
        }
        scope="pagination"
        to="blog"
      >
        ⟨ Previous
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 4,
          }
        }
        scope="pagination"
        to="blog"
      >
        4
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 5,
          }
        }
        scope="pagination"
        to="blog"
      >
        5
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 6,
          }
        }
        scope="pagination"
        to="blog"
      >
        6
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 7,
          }
        }
        scope="pagination"
        to="blog"
      >
        7
      </Link>
    </li>
    <li
      className="page-item"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 8,
          }
        }
        scope="pagination"
        to="blog"
      >
        8
      </Link>
    </li>
    <li
      className="page-item active"
    >
      <Link
        className="page-link"
        params={
          Object {
            "page": 9,
          }
        }
        scope="pagination"
        to="blog"
      >
        9
      </Link>
    </li>
  </ul>
</nav>
`;

exports[`<Pagination /> shouldn't render disabled nav items when renderDisabled is false 3`] = `
<nav
  aria-label="Pagination Navigation"
  role="navigation"
>
  <ul
    className="pagination"
  >
    <li
      className="page-item active"
    >
      <Link
        className="page-link"
        scope={null}
        to="blog"
      >
        1
      </Link>
    </li>
  </ul>
</nav>
`;
